# sealvault

./: .gitignore  .prettierrc  Brewfile  CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md  Wallet.tla  ci.py  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  product-development-task.md
.github/workflows/: ci.yml
core/: Cargo.toml  build.rs
core/assets/: public-suffix-list.dat.txt
core/assets/js/: in-page-provider.js
core/assets/protocols/eth/: common-tokens.json
core/db/: README.md
core/migrations/2022-08-01-000000_initial/: down.sql  up.sql
core/migrations/2022-11-20-160917_backups/: down.sql  up.sql
core/migrations/2022-12-13-163419_profiles/: down.sql  up.sql
core/migrations/2022-12-25-160917_backups/: down.sql  up.sql
core/migrations/2023-02-16-084100_custom_tokens/: down.sql  up.sql
core/migrations/2023-02-16-084100_tokens/: down.sql  up.sql
core/src/: SealVaultCore.udl  app_core.rs  assets.rs  async_runtime.rs  backup.rs  config.rs  device.rs  dto.rs  error.rs  favicon.rs  http_client.rs  in_page_provider.rs  lib.rs  public_suffix_list.rs  resources.rs  ui_callback.rs  utils.rs
core/src/backup/: backup_error.rs  backup_password.rs  backup_scheme.rs  backup_storage.rs  create.rs  metadata.rs  mod.rs  restore.rs  setup.rs
core/src/db/: connection_pool.rs  data_migrations.rs  deterministic_id.rs  json_value.rs  mod.rs  schema.rs  schema_migrations.rs  url_value.rs
core/src/db/models/: account.rs  account_picture.rs  address.rs  asymmetric_key.rs  chain.rs  custom_token.rs  dapp.rs  data_encryption_key.rs  data_migration.rs  local_dapp_session.rs  local_encrypted_dek.rs  local_settings.rs  mod.rs  profile.rs  profile_picture.rs  token.rs  token_to_address.rs
core/src/encryption/: backup_password.rs  encrypt_decrypt.rs  encryption_key.rs  encryption_output.rs  kdf_nonce.rs  kdf_secret.rs  key_material.rs  key_name.rs  mod.rs  root_backup_key.rs
core/src/encryption/keychains/: in_memory_keychain.rs  ios_keychain.rs  keychain.rs  mod.rs
core/src/in_page_provider/: dapp_key_provider.rs  in_page_request.rs  mod.rs
core/src/protocols/: blockchain_protocol.rs  checksum_address.rs  mod.rs  token_type.rs
core/src/protocols/eth/: ankr.rs  chain_id.rs  chain_settings.rs  checksum_address.rs  encrypted_signing_key.rs  explorer.rs  mod.rs  protocol_data.rs  rpc_provider.rs  signer.rs  signing_key.rs  token.rs  token_balances.rs  zksync_gas_oracle.rs
core/src/protocols/eth/contracts/: mod.rs
core/src/protocols/eth/contracts/fungible_token_test/: FungibleTokenTest.sol
core/src/protocols/eth/in_page_provider/: dapp_key_provider.rs  in_page_request.rs  mod.rs
core/src/protocols/eth/token_api/: ankr.rs  common_tokens.rs  mod.rs  native.rs  token_balances.rs
core/src/signatures/: asymmetric_key.rs  elliptic_curve.rs  mod.rs  recoverable_signature.rs  secp256k1_key.rs
core_macros/: Cargo.toml
core_macros/src/: db.rs  lib.rs
ios/: .gitignore  .swiftlint.yml  README.md  pre_build.py
ios/SealVault.xcodeproj/: project.pbxproj
ios/SealVault.xcodeproj/xcshareddata/xcschemes/: SealVault.xcscheme
ios/SealVaultApp/: AccountImage.swift  AccountListView.swift  AccountRow.swift  AccountView.swift  AddChain.swift  AddProfile.swift  AddressMenu.swift  AddressView.swift  AppTabNavigation.swift  AsyncButton.swift  BackupSettings.swift  Banner.swift  BrowserView.swift  ChainLabel.swift  ChainMenu.swift  ChainSelection.swift  Config.swift  CoreUICallback.swift  CustomSecureField.swift  DappApproval.swift  DappRow.swift  DappView.swift  DialogButtons.swift  GlobalSettings.swift  IconView.swift  ImportToken.swift  Info.plist  ProfileImage.swift  ProfileListView.swift  ProfileName.swift  ProfileRow.swift  ProfileView.swift  RecoveryView.swift  SealVaultApp.entitlements  SealVaultApp.swift  Settings.swift  SheetTitle.swift  TokenAmount.swift  TokenLabel.swift  TokenRow.swift  (+5 more)
ios/SealVaultApp/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/SealVaultApp/Assets.xcassets/seal-0.imageset/: Contents.json
ios/SealVaultApp/Model/: Account.swift  Address.swift  BannerModel.swift  BrowserWindow.swift  CallbackModel.swift  CoreBackupStorage.swift  CoreUICallback.swift  Dapp.swift  GlobalModel.swift  LocalFiles.swift  MultichainAddress.swift  NFT.swift  Profile.swift  RecoveryModel.swift  RestoreModel.swift  Token.swift  TokenTransferSent+displayTo.swift  ViewModel.swift
ios/SealVaultApp/Templates/: DevApiKeys.stencil
ios/SealVaultApp/Util/: RandomColor.swift  authenticate.swift  dispatchBackground.swift  displayChecksumAddress.swift  onBackground.swift  onInactive.swift  sortAddressesBy.swift
ios/SealVaultApp/html/: error-page.html
ios/SealVaultUITests/: BrowserUITest.swift  NativeUITest.swift  SealVaultUITests.swift
ios/TestPlans/: FullTest.xctestplan  NativeUI.xctestplan
ios/ci_scripts/: ci_post_clone.sh  ci_pre_xcodebuild.sh
ios/fastlane/: Fastfile  README.md
tools/alloy/: token.als
tools/compile-tokens/: Cargo.toml  README.md
tools/compile-tokens/src/: main.rs
tools/dev-server/: .gitignore  Cargo.toml  README.md
tools/dev-server/src/: main.rs
tools/dev-server/static/: cookie-test.html  ethereum.html  index.html  new-tab-target.html  open-new-tab.html
tools/dev-server/static/js/: sealvault-test.js
tools/embedded-uniff-bindgen/: Cargo.toml  README.md
tools/embedded-uniff-bindgen/src/: main.rs
tools/fuzz/: Cargo.toml  README.md
tools/fuzz/fuzz_targets/: fuzz_in_page_request.rs
tools/tla/: .gitignore  MCTokenTransfer.cfg  MCTokenTransfer.tla  MCWallet.cfg  MCWallet.tla  README.md  TokenTransfer.tla  Wallet.tla
tools/tla/Wallet.toolbox/: .project
tools/tools-lib/: Cargo.toml  README.md
tools/tools-lib/src/: lib.rs
website/: Pipfile  README.md  mkdocs.insiders.yml  mkdocs.yml  netlify.toml
website/src/: backup.md  burners.md  dapp-keys.md  index.md  one-dapp-per-key.md  privacy.md  profiles.md
website/src/blog/: .authors.yml
website/src/dev-docs/: index.md  principles.md  rust.md
website/src/discover/: index.md
website/src/overrides/: main.html
(+59 files in other folders)
