[package]
# We prefix with "sealvault_" to avoid collision with the Rust core package
name = "sealvault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "uniffi_sealvault_core"

[dependencies]
aead = { version = "0.5.1", features = ["alloc"] }
anyhow = "1.0.69"
argon2 = { version = "0.5.0", features = ["std", "zeroize"] }
async-trait = "0.1.66"
base64 = "0.21.0"
blake3 = "1.3.3"
cacache = "11.3.0"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.23"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.3"
data-encoding = "2.3.3"
der = "0.7.1"
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dyn-clone = "1.0.11"
## `serde` feauture implicitly depends on `pem` in 0.12.1
ecdsa = { version = "0.16.0", features = ["digest", "signing"] }
email_address = "0.2.4"
env_logger = "0.10.0"
# Fork pending release of https://github.com/gakonst/ethers-rs/pull/2051
ethers = { git = "https://github.com/agostbiro/ethers-rs", rev = "90abdd5", features = ["legacy", "eip712", "abigen"] }
futures = "0.3.26"
generic-array = "0.14.6"
hex = "0.4.3"
http = "0.2.9"
http-cache-reqwest = "0.7.2"
itertools = "0.10.5"
# Git version needed for unreleased https://github.com/paritytech/jsonrpsee/pull/845
jsonrpsee = { version = "0.16.2", features = ["server", "http-client", "macros"] }
k256 = { version = "0.13.0", features = ["digest", "ecdsa", "pkcs8", "pem"] }
lazy_static = "1.4.0"
# This is a dependency of Diesel. We add it here to use bundled (statically linked SQLite)
# with the feature flag. We need at least 0.24, bc that bundles SQLite 3.38.0 which
# ships with JSON support compiled in.
libsqlite3-sys = { version = ">=0.24, <0.26.0", features = ["bundled"] }
log = { version = "0.4.17", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
olpc-cjson = "0.1.3"
publicsuffix = "2.2.3"
rand = "0.8.5"
readonly = "0.2.4"
regex = "1.7.1"
reqwest = { version = "0.11.14" }
reqwest-middleware = "0.2.0"
rust-embed = "6.6.0"
rust_decimal = { version = "1.28.1", features = ["maths"] }
serde = { version = "1.0.153", features = ["serde_derive", "derive", "alloc"] }
serde_json = { version = "1.0.94", features = ["alloc", "raw_value"] }
sha2 = { version = "0.10.6" }
sha3 = "0.10.6"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
strum_macros = "0.24.3"
subtle = "2.4.1"
tempfile = "3.4.0"
thiserror = "1.0.39"
tokio = "1.26.0"
typed-builder = "0.13.0"
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
zeroize = { version = "1.5.7", features = ["derive"] }
zip = "0.6.4"

[build-dependencies]
# Important to match uniffi dep version in `embedded-uniff-bindgen`
uniffi = { version = "0.23.0", features = ["build"] }

[dev-dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
ethers = { git = "https://github.com/agostbiro/ethers-rs", rev = "90abdd5", features = ["legacy", "eip712", "abigen-offline", "solc-full"] }
