[package]
# We prefix with "sealvault_" to avoid collision with the Rust core package
name = "sealvault_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]
name = "uniffi_sealvault_core"

[dependencies]
aead = { version = "0.5.2", features = ["alloc"] }
anyhow = "1.0.70"
argon2 = { version = "0.5.0", features = ["std", "zeroize"] }
async-trait = "0.1.68"
base64 = "0.21.0"
blake3 = "1.3.3"
cacache = "11.5.2"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.24"
core-foundation = "0.9.3"
core-foundation-sys = "0.8.4"
data-encoding = "2.3.3"
der = "0.7.3"
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dyn-clone = "1.0.11"
ecdsa = { version = "0.16.6", features = ["digest", "signing"] }
email_address = "0.2.4"
env_logger = "0.10.0"
# Fork pending https://github.com/gakonst/ethers-rs/pull/2391
ethers = { git = "https://github.com/agostbiro/ethers-rs", rev = "7483f31", features = ["legacy", "eip712", "abigen"] }
futures = "0.3.28"
generic-array = "0.14.7"
hex = "0.4.3"
http = "0.2.9"
http-cache-reqwest = "0.7.2"
itertools = "0.10.5"
jsonrpsee = { version = "0.18.2", features = ["server", "http-client", "macros"] }
jsonrpsee-http-client = { version = "0.18.2", features = ["webpki-tls"]}
k256 = { version = "0.13.1", features = ["digest", "ecdsa", "pkcs8", "pem"] }
lazy_static = "1.4.0"
# This is a dependency of Diesel. We add it here to use bundled (statically linked SQLite)
# with the feature flag. We need at least 0.24, bc that bundles SQLite 3.38.0 which
# ships with JSON support compiled in.
libsqlite3-sys = { version = ">=0.24, <0.26.0", features = ["bundled"] }
log = { version = "0.4.17", features = ["serde"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
olpc-cjson = "0.1.3"
publicsuffix = "2.2.3"
rand = "0.8.5"
readonly = "0.2.8"
regex = "1.7.3"
reqwest = { version = "0.11.17", features = ["json"] }
reqwest-middleware = "0.2.1"
rust-embed = "6.6.1"
rust_decimal = { version = "1.29.1", features = ["maths"] }
serde = { version = "1.0.160", features = ["serde_derive", "derive", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "raw_value"] }
sha2 = { version = "0.10.6" }
sha3 = "0.10.7"
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
strum_macros = "0.24.3"
subtle = "2.4.0"
tempfile = "3.5.0"
thiserror = "1.0.40"
tokio = "1.27.0"
typed-builder = "0.13.0"
uniffi = "0.23.0"
uniffi_macros = "0.23.0"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4"] }
zeroize = { version = "1.6.0", features = ["derive"] }
zip = "0.6.4"

core_macros = { path = "../core_macros" }
bytes = { version = "1.4.0", features = ["serde"] }

[build-dependencies]
# Important to match uniffi dep version in `embedded-uniff-bindgen`
uniffi = { version = "0.23.0", features = ["build"] }

[dev-dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
ethers = { git = "https://github.com/agostbiro/ethers-rs", rev = "7483f31", features = ["legacy", "eip712", "abigen-offline", "solc-full"] }
test-log = "0.2.11"
