[package]
name = "compile-tokens"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11.17" }
sealvault_core = { path = "../../core" }
serde = { version = "1.0.160", features = ["serde_derive", "derive", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "raw_value"] }
strum = { version = "0.24.1", features = ["derive", "strum_macros"] }
tempfile = "3.5.0"
url = { version = "2.3.1" }
