[package]
name = "sealvault_dev_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sealvault_core = { path = "../../core" }
axum = { version = "0.6.2", features = ["tower-log"] }
env_logger = "0.10.0"
ethers = { git = "https://github.com/agostbiro/ethers-rs", rev = "90abdd5", features = ["legacy", "eip712"] }
dotenv = "0.15.0"
hyper = { version = "0.14.23", features = ["full"] }
log = { version = "0.4.17", features = ["serde"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["fs", "trace"] }
