[package]
name = "sealvault_dev_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.10", features = ["tower-log"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = { version = "2.0.0", features = ["legacy", "eip712"] }
hyper = { version = "0.14.24", features = ["full"] }
log = { version = "0.4.17", features = ["serde"] }
sealvault_core = { path = "../../core" }
sealvault_tools_lib = { path = "../tools-lib" }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
